--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port = 8383
+
+
 #Mysql Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/schoolappdb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
